@@ -10,6 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,7 +24,7 @@ public class MukBTIController {
                 .questions(mukBTIQuestions
                         .stream()
                         .map(MukBTIQuestionEntity::toQuestion)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build());
     }
 
